Fixed Footer alignment and removed underlines from Nav items

--- a/css/index.css
+++ b/css/index.css
@@ -193,7 +193,7 @@ footer nav a {
 .entire-container {
 }
 
-nav {
+header nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
@@ -203,8 +203,9 @@ nav {
  width: 800px
 }
 
-nav a {
+header nav a {
  color: black;
+ text-decoration: none;
 }
 
 nav img {
